<package>
    <name>moxa_interface</name>
    <version>0.0.1</version>
    <description>Drivers and nodes related to MOXA I/O logic</description>
    
    <maintainer email="RMP@stanleyinnovation.com">Stanley Innovation, Inc.</maintainer>
    <license>BSD</license>
    <url type="website">http://stanleyinnovation.com</url>
    <author>Patrick Hussey</author>

    <buildtool_depend>catkin</buildtool_depend>

    <!-- Packages needed to build and run-->
    <!--build_depend>dynamic_reconfigure</build_depend>
    <run_depend>dynamic_reconfigure</run_depend-->
    
    <!-- Packages needed to run but not to build-->
    <run_depend>moxa_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>actionlib_msgs</run_depend>
	<export>
	</export>
</package>
