<?xml version="1.0"?>
<package>
    <name>vector_third_party</name>
    <version>0.0.1</version>
    <description>Third party drivers and nodes related to Stanley Innovation Vector Platform</description>
    
    <maintainer email="dev@stanleyinnovation.com">Patrick Hussey</maintainer>
    <author>Patrick Hussey</author>
    <url type="repository">https://github.com/stanley_innovation</url>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <run_depend>teb_local_planner</run_depend>

    <export>
      <metapackage/>
    </export>
</package>
